[gd_scene load_steps=9 format=3 uid="uid://i4t8u3v9w0xyz"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/CustomerInsight.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/AdFatigueTrap.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/BehaviorKey.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/ABTestDoor.tscn" id="6"]
[ext_resource type="PackedScene" path="res://scenes/TargetAudienceLock.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/Goal.tscn" id="8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_Wall"]
size = Vector2(800, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_Wall2"]
size = Vector2(20, 600)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.4, 1)

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
position = Vector2(400, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
shape = SubResource("RectangleShape2D_Wall")

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2(400, 590)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
shape = SubResource("RectangleShape2D_Wall")

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2(10, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("RectangleShape2D_Wall2")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(790, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource("RectangleShape2D_Wall2")

[node name="MazeWalls" type="Node2D" parent="Walls"]

[node name="HorizontalWall1" type="StaticBody2D" parent="Walls/MazeWalls"]
position = Vector2(300, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MazeWalls/HorizontalWall1"]
shape = SubResource("RectangleShape2D_Wall")

[node name="HorizontalWall2" type="StaticBody2D" parent="Walls/MazeWalls"]
position = Vector2(600, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MazeWalls/HorizontalWall2"]
shape = SubResource("RectangleShape2D_Wall")

[node name="VerticalWall1" type="StaticBody2D" parent="Walls/MazeWalls"]
position = Vector2(200, 350)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MazeWalls/VerticalWall1"]
shape = SubResource("RectangleShape2D_Wall2")

[node name="VerticalWall2" type="StaticBody2D" parent="Walls/MazeWalls"]
position = Vector2(500, 250)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/MazeWalls/VerticalWall2"]
shape = SubResource("RectangleShape2D_Wall2")

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(50, 50)

[node name="CustomerInsight1" parent="." instance=ExtResource("3")]
position = Vector2(150, 100)

[node name="CustomerInsight2" parent="." instance=ExtResource("3")]
position = Vector2(400, 150)

[node name="CustomerInsight3" parent="." instance=ExtResource("3")]
position = Vector2(250, 300)

[node name="CustomerInsight4" parent="." instance=ExtResource("3")]
position = Vector2(650, 200)

[node name="CustomerInsight5" parent="." instance=ExtResource("3")]
position = Vector2(550, 500)

[node name="AdFatigueTrap1" parent="." instance=ExtResource("4")]
position = Vector2(300, 100)

[node name="AdFatigueTrap2" parent="." instance=ExtResource("4")]
position = Vector2(500, 350)

[node name="AdFatigueTrap3" parent="." instance=ExtResource("4")]
position = Vector2(700, 300)

[node name="BehaviorKey1" parent="." instance=ExtResource("5")]
position = Vector2(100, 400)

[node name="BehaviorKey2" parent="." instance=ExtResource("5")]
position = Vector2(450, 300)

[node name="ABTestDoor1" parent="." instance=ExtResource("6")]
position = Vector2(350, 250)

[node name="TargetAudienceLock1" parent="." instance=ExtResource("7")]
position = Vector2(550, 350)

[node name="Goal" parent="." instance=ExtResource("8")]
position = Vector2(700, 500)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 40.0
text = "Insights: 0"

[node name="KeysLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 45.0
offset_right = 100.0
offset_bottom = 75.0
text = "Keys: 0"

[node name="InstructionsLabel" type="Label" parent="UI"]
offset_left = 250.0
offset_top = 10.0
offset_right = 750.0
offset_bottom = 40.0
text = "WASD: Move | Space: Jump | Collect insights, avoid red traps!"
horizontal_alignment = 1